--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
 			type="text/css"
 		/>
 		<link
-			href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+			href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
 			rel="stylesheet"
 			type="text/css"
 		/>
-		<link type="text/css" rel="stylesheet" href="style.css" />
+		<link type="text/css" rel="stylesheet" href="css/style.css" />
 
 		<title>Pig Game</title>
 	</head>
@@ -49,7 +49,7 @@
 
 			<img src="dice-5.png" alt="Dice" class="dice" />
 		</div>
-
-		<script src="app.js"></script>
+		<script type="module" src="js/store.js"></script>
+		<script type="module" src="js/app.js"></script>
 	</body>
 </html>
