Final build source version

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
 				<i class="ion-ios-download-outline"></i>Hold
 			</button>
 
-			<img src="dice-5.png" alt="Dice" class="dice" />
+			<img src="img/dice-5.png" alt="Dice" class="dice" />
 		</div>
 		<script type="module" src="js/store.js"></script>
 		<script type="module" src="js/app.js"></script>
